@@ -119,13 +119,31 @@ void NNormalSurface::readIndividualProperty(NFile& infile,
         unsigned propType) {
     if (propType == PROPID_EULERCHARACTERISTIC)
         eulerChar = infile.readLarge();
-    else if (propType == PROPID_ORIENTABILITY)
-        orientable = infile.readInt();
-    else if (propType == PROPID_TWOSIDEDNESS)
-        twoSided = infile.readInt();
-    else if (propType == PROPID_CONNECTEDNESS)
-        connected = infile.readInt();
-    else if (propType == PROPID_REALBOUNDARY)
+    else if (propType == PROPID_ORIENTABILITY) {
+        int val = infile.readInt();
+        if (val == 1)
+            orientable = true;
+        else if (val == -1)
+            orientable = false;
+        else
+            orientable = NTriBool::Unknown;
+    } else if (propType == PROPID_TWOSIDEDNESS) {
+        int val = infile.readInt();
+        if (val == 1)
+            twoSided = true;
+        else if (val == -1)
+            twoSided = false;
+        else
+            twoSided = NTriBool::Unknown;
+    } else if (propType == PROPID_CONNECTEDNESS) {
+        int val = infile.readInt();
+        if (val == 1)
+            connected = true;
+        else if (val == -1)
+            connected = false;
+        else
+            connected = NTriBool::Unknown;
+    } else if (propType == PROPID_REALBOUNDARY)
         realBoundary = infile.readBool();
     else if (propType == PROPID_COMPACT)
         compact = infile.readBool();
@@ -386,17 +404,35 @@ void NNormalSurface::writeToFile(NFile& out) const {
     }
     if (orientable.known()) {
         bookmark = out.writePropertyHeader(PROPID_ORIENTABILITY);
-        out.writeInt(orientable.value());
+        NTriBool val = orientable.value();
+        if (val.isTrue())
+            out.writeInt(1);
+        else if (val.isFalse())
+            out.writeInt(-1);
+        else
+            out.writeInt(0);
         out.writePropertyFooter(bookmark);
     }
     if (twoSided.known()) {
         bookmark = out.writePropertyHeader(PROPID_TWOSIDEDNESS);
-        out.writeInt(twoSided.value());
+        NTriBool val = twoSided.value();
+        if (val.isTrue())
+            out.writeInt(1);
+        else if (val.isFalse())
+            out.writeInt(-1);
+        else
+            out.writeInt(0);
         out.writePropertyFooter(bookmark);
     }
     if (connected.known()) {
         bookmark = out.writePropertyHeader(PROPID_CONNECTEDNESS);
-        out.writeInt(connected.value());
+        NTriBool val = connected.value();
+        if (val.isTrue())
+            out.writeInt(1);
+        else if (val.isFalse())
+            out.writeInt(-1);
+        else
+            out.writeInt(0);
         out.writePropertyFooter(bookmark);
     }
     if (realBoundary.known()) {
