@@ -11,6 +11,8 @@ Version 4.0  [ currently under development ]
     ENGINE:
         Class NNormalSurface:
             - Using NProperty to store calculable properties.
+            - Using NTriBool instead of 1/-1/0 for orientability,
+              two-sidedness and connectedness.
         Class NTriBool:
             - Added for representing three-way booleans.
 
